--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,4 +1,4 @@
---- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/jasonwynn10/MyPlot
+ev--- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Ceepkev77/MyPlotMerge
 build-by-default: true
 branches:
 - master
