--- a/resources/deu.ini
+++ b/resources/deu.ini
@@ -254,7 +254,7 @@ fill.desc=aushuelle dein Grundstück
 fill.usage=/p fill
 
 ;The /p wand Subcommand
-rand.name=wand
-rand.alias=
-rand.desc=Ändere die Wand deines Grunstückes
-rand.usage=/p wand
+wand.name=wand
+wand.alias=w
+wand.desc=Ändere die Wand deines Grunstückes
+wand.usage=/p wand
