--- a/resources/eng.ini
+++ b/resources/eng.ini
@@ -244,7 +244,7 @@ kick.usage=/p kick <player>
 ;The /p rand Subcommand
 rand.name=rand
 rand.alias=b
-rand.desc=Ändere den rand deines Grunstückes
+rand.desc=Ändere den Rand deines Grunstückes
 rand.usage=/p rand
 
 ; The /p fill Subcommand
@@ -252,3 +252,9 @@ fill.name=fill
 fill.alias=f
 fill.desc=aushuelle dein Grundstück
 fill.usage=/p fill
+
+;The /p wand Subcommand
+wand.name=wand
+wand.alias=w
+wand.desc=Ändere die Wand deines Grunstückes
+wand.usage=/p wand
